# fcpst

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build.yaml  publish.yaml
docs/themes/: go.mod
src/: archiver.rs  cli.rs  extractor.rs  main.rs
src/archiver/: tar.rs  zip.rs
src/extractor/: tar.rs  zip.rs
