[package]
name = "fcpst"
version = "0.1.0"
edition = "2021"
description = "fcpst: ファイルやディレクトリをアーカイブ・展開するコマンド"
license = "MIT"
repository = "https://github.com/clownUR/fcpst"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
zip = "2.1.3"
tar = "0.4"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
